package com.lld.kvstore.domain;

public enum HolderType {
    PRIMITIVE,
    LIST,
    SET
}
