package com.lld.kvstore.domain;

public enum PrimitiveKind {
    STRING,
    INTEGER,
    LONG,
    DOUBLE,
    FLOAT,
    BOOLEAN
}
